tests/ui/impl-trait/equality-in-canonical-query.clone.stderr
error: internal compiler error: no errors encountered even though `delay_span_bug` issued

error: internal compiler error: {OpaqueTypeKey { def_id: DefId(rpit::{opaque#0}), args: [] }: OpaqueTypeDecl { hidden_type: OpaqueHiddenType { span: no-location (#0), ty: Alias(Opaque, AliasTy { args: [], def_id: DefId(foo::{opaque#0}) }) } }}
   |
   = 
           

error: internal compiler error: error performing ParamEnvAnd { param_env: ParamEnv { caller_bounds: [], reveal: UserFacing }, value: ProvePredicate { predicate: Binder { value: ProjectionPredicate(AliasTy { args: [FnDef(DefId(rpit), []), ()], def_id: DefId(ops::function::FnOnce::Output) }, Term::Ty(Alias(Opaque, AliasTy { args: [], def_id: DefId(foo::{opaque#0}) }))), bound_vars: [] } } }
  --> $DIR/equality-in-canonical-query.rs:19:5
   |
LL |     same_output(foo, rpit);
   |     ^^^^^^^^^^^^^^^^^^^^^^
   |

  --> $DIR/equality-in-canonical-query.rs:19:5
   |
LL |     same_output(foo, rpit);
   |     ^^^^^^^^^^^^^^^^^^^^^^







query stack during panic:
end of query stack
error: aborting due to 3 previous errors

